Expanded TAB characters to spaces in all Java, C, and C++ source files